--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,5 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-OIEI5LKW.js" type="module"></script></body>
+<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="scripts-EEEIPNC3.js" defer></script><script src="main-BHB5GBLO.js" type="module"></script></body>
 </html>
